--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Olá Mundo!<br>
+    <p>Olá Mundo!<br></p>
     <img src="converted_colors.png" alt="herói">
 </body>
 </html>
