Alterando mensagem para ficar como a atividade necessita

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Olá Mundo!<br></p>
+    <p>Hello World, sou Pedro!<br></p>
     <img src="converted_colors.png" alt="herói">
 </body>
 </html>
